syntax = "proto3";

package sampleapp_viewmodels_protos;

option csharp_namespace = "SampleApp.ViewModels.Protos";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the SampleViewModel
message SampleViewModelState {
  string name = 1;
  string count = 2;
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message IncrementCountRequest {}
message IncrementCountResponse {}

message SetNameToValueResponse {
  // Add fields here if the command returns data.
}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service SampleViewModelService {
  rpc GetState (google.protobuf.Empty) returns (SampleViewModelState);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (google.protobuf.Empty) returns (stream PropertyChangeNotification);
  rpc IncrementCount (IncrementCountRequest) returns (IncrementCountResponse);
  rpc DelayedIncrementAsync (DelayedIncrementAsyncRequest) returns (DelayedIncrementAsyncResponse);
  rpc SetNameToValue (SetNameToValueRequest) returns (SetNameToValueResponse);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}

